--- a/sage_latex_template_3/bibliography.bib
+++ b/sage_latex_template_3/bibliography.bib
@@ -7,6 +7,65 @@
   url = {https://www.R-project.org/},
 }
 
+
+@article{scott2002,
+title = "The method of minimization for allocation to clinical trials: a review",
+journal = "Controlled Clinical Trials",
+volume = "23",
+number = "6",
+pages = "662 - 674",
+year = "2002",
+issn = "0197-2456",
+doi = "https://doi.org/10.1016/S0197-2456(02)00242-8",
+url = "http://www.sciencedirect.com/science/article/pii/S0197245602002428",
+author = "Neil W Scott and Gladys C McPherson and Craig R Ramsay and Marion K Campbell",
+keywords = "Minimization, Randomization, Clinical trials, Systematic review",
+abstract = "Minimization is a largely nonrandom method of treatment allocation for clinical trials. We conducted a systematic literature search to determine its advantages and disadvantages compared with other allocation methods. Minimization was originally proposed by Taves and by Pocock and Simon. The latter paper introduces a family of allocation methods of which Taves' method is the simplest example. Minimization aims to ensure treatment arms are balanced with respect to predefined patient factors as well as for the number of patients in each group. Further extensions of the method have also been proposed by other authors. Simulation studies show that minimization provides better balanced treatment groups when compared with restricted or unrestricted randomization and that it can incorporate more prognostic factors than stratified randomization methods such as permuted blocks within strata. Some more computationally complex methods may give an even better performance. Concerns over the use of minimization have centered on the fact that treatment assignments may be predicted with certainty in some situations and on the implications for the analysis methods used. It has been suggested that adjustment should always be made for minimization factors when analyzing trials where minimization is the allocation method used. The use of minimization may sometimes result in added organizational complexity compared with other methods. Minimization has been recommended by many commentators for use in clinical trials. Despite this it is still rarely used in practice. From the evidence presented in this review, we believe minimization to be a highly effective allocation method and recommend its wider adoption in the conduct of randomized controlled trials."
+}
+
+@article{li2016,
+author = {Li, Fan and Lokhnygina, Yuliya and Murray, David M. and Heagerty, Patrick J. and DeLong, Elizabeth R.},
+title = {An evaluation of constrained randomization for the design and analysis of group-randomized trials},
+journal = {Statistics in Medicine},
+volume = {35},
+number = {10},
+pages = {1565-1579},
+keywords = {constrained randomization, group-randomized trial, permutation test, model-based F-test, candidate set size, balance metric},
+doi = {10.1002/sim.6813},
+url = {https://onlinelibrary.wiley.com/doi/abs/10.1002/sim.6813},
+eprint = {https://onlinelibrary.wiley.com/doi/pdf/10.1002/sim.6813},
+abstract = {In group-randomized trials, a frequent practical limitation to adopting rigorous research designs is that only a small number of groups may be available, and therefore, simple randomization cannot be relied upon to balance key group-level prognostic factors across the comparison arms. Constrained randomization is an allocation technique proposed for ensuring balance and can be used together with a permutation test for randomization-based inference. However, several statistical issues have not been thoroughly studied when constrained randomization is considered. Therefore, we used simulations to evaluate key issues including the following: the impact of the choice of the candidate set size and the balance metric used to guide randomization; the choice of adjusted versus unadjusted analysis; and the use of model-based versus randomization-based tests. We conducted a simulation study to compare the type I error and power of the F-test and the permutation test in the presence of group-level potential confounders. Our results indicate that the adjusted F-test and the permutation test perform similarly and slightly better for constrained randomization relative to simple randomization in terms of power, and the candidate set size does not substantially affect their power. Under constrained randomization, however, the unadjusted F-test is conservative, while the unadjusted permutation test carries the desired type I error rate as long as the candidate set size is not too small; the unadjusted permutation test is consistently more powerful than the unadjusted F-test and gains power as candidate set size changes. Finally, we caution against the inappropriate specification of permutation distribution under constrained randomization. An ongoing group-randomized trial is used as an illustrative example for the constrained randomization design. Copyright © 2015 John Wiley \& Sons, Ltd.},
+year = {2016}
+}
+
+
+
+@article{moulton2004,
+author = {Lawrence H Moulton},
+title ={Covariate-based constrained randomization of group-randomized trials},
+journal = {Clinical Trials},
+volume = {1},
+number = {3},
+pages = {297-305},
+year = {2004},
+doi = {10.1191/1740774504cn024oa},
+    note ={PMID: 16279255},
+
+URL = { 
+        https://doi.org/10.1191/1740774504cn024oa
+    
+},
+eprint = { 
+        https://doi.org/10.1191/1740774504cn024oa
+    
+}
+,
+    abstract = { Group-randomized study designs are useful when individually randomized designs are either not possible, or will not be able to estimate the parameters of interest. Blocked and/or stratified (for example, pair-matched) designs have been used, and their properties statistically evaluated by many researchers. Group-randomized trials often have small numbers of experimental units, and strong, geographically induced between-unit correlation, which increase the chance of obtaining a “bad” randomization outcome. This article describes a procedure – random selection from a list of acceptable allocations – to allocate treatment conditions in a way that ensures balance on relevant covariates. Numerous individual- and group-level covariates can be balanced using exact or caliper criteria. Simulation results indicate that this method has good frequency properties, but some care may be needed not to overly constrain the randomization. There is a trade-off between achieving good balance through a highly constrained design, and jeopardizing the appearance of impartiality of the investigator and potentially departing from the nominal Type I error. }
+}
+
+
+
+
 @article{huang2013targeted,
   title={Targeted versus universal decolonization to prevent ICU infection},
   author={Huang, Susan S and Septimus, Edward and Kleinman, Ken and Moody, Julia and Hickok, Jason and Avery, Taliser R and Lankiewicz, Julie and Gombosev, Adrijana and Terpstra, Leah and Hartford, Fallon and others},
@@ -28,6 +87,22 @@
   year={2004},
   publisher={Biometrika Trust}
 }
+
+
+@article{greevy2012,
+author = {Greevy Jr., Robert A. and Grijalva, Carlos G. and Roumie, Christianne L. and Beck, Cole and Hung, Adriana M. and Murff, Harvey J. and Liu, Xulei and Griffin, Marie R.},
+title = {Reweighted Mahalanobis distance matching for cluster-randomized trials with missing data},
+journal = {Pharmacoepidemiology and Drug Safety},
+volume = {21},
+number = {S2},
+pages = {148-154},
+doi = {10.1002/pds.3260},
+url = {https://onlinelibrary.wiley.com/doi/abs/10.1002/pds.3260},
+eprint = {https://onlinelibrary.wiley.com/doi/pdf/10.1002/pds.3260},
+abstract = {ABSTRACT Purpose This paper introduces an improved tool for designing matched-pairs randomized trials. The tool allows the incorporation of clinical and other knowledge regarding the relative importance of variables used in matching and allows for multiple types of missing data. The method is illustrated in the context of a cluster-randomized trial. A Web application and an R package are introduced to implement the method and incorporate recent advances in the area. Methods Reweighted Mahalanobis distance (RMD) matching incorporates user-specified weights and imputed values for missing data. Weight may be assigned to missingness indicators to match on missingness patterns. Three examples are presented, using real data from a cohort of 90 Veterans Health Administration sites that had at least 100 incident metformin users in 2007. Matching is utilized to balance seven factors aggregated at the site level. Covariate balance is assessed for 10 000 randomizations under each strategy: simple randomization, matched randomization using the Mahalanobis distance, and matched randomization using the RMD. Results The RMD matching achieved better balance than simple randomization or MD randomization. In the first example, simple and MD randomization resulted in a 10\% chance of seeing an absolute mean difference of greater than 26\% in the percent of nonwhite patients per site; the RMD dramatically reduced that to 6\%. The RMD achieved significant improvement over simple randomization even with as much as 20\% of the data missing. Conclusions Reweighted Mahalanobis distance matching provides an easy-to-use tool that incorporates user knowledge and missing data. Copyright © 2012 John Wiley \& Sons, Ltd.},
+year = {2012}
+}
+
 
 @article{nmatch,
   title={designmatch: Construction of Optimally Matched Samples for Randomized Experiments and Observational Studies that are Balanced and Representative by Design},
