--- a/sage_latex_template_3/Kenv1.Rmd
+++ b/sage_latex_template_3/Kenv1.Rmd
@@ -11,19 +11,11 @@ output:
     number_sections: yes
   word_document: default
 keywords: cluster-randomized trials, matching
-abstract: 'Matching in cluster-randomized trials (CRTs) is important for improving
-  covariate balance in cluster characteristics across groups, but there is no best
-  practice describing how to make matches. When baseline data are available, we suggest
-  a strategy that can be used to achieve the desired balance between treatment and
-  control groups across numerous potential confounding variables. This strategy minimizes
-  the overall within-pair distance; and involves iteratively: 1) computing the Mahalanobis
-  distance;  2) finding the pairs; 3) rerandomizing multiple times to generate the
-  potential between-arm imbalance; then 4) reweighting the potential confounders.  To
-  aid in the evaluation of step 3, we plot the between-arm differences for each variable
-  with a parallel-coordinates plot. Investigators can compare plots of different weighting
-  schemes to determine the one that best suits their needs prior to the actual, final,
-  randomization.  We demonstrate application of the approach with the Mupirocin-Iodophor
-  Swap Out trial.'
+abstract: 'In cluster-randomized trials (CRTs), matching is a technique that can be used to improve covariate balance. 
+  When baseline data are available, we suggest a strategy that can be used to achieve the desired balance between treatment and control groups across numerous potential confounding variables. 
+  This strategy minimizes the overall within-pair distance; and involves iteratively: 1) computing the Mahalanobis distance; 2) finding the pairs which minimize the distance between the pairs; 3) rerandomizing multiple times to generate the potential between-arm imbalance; then 4) reweighting the potential confounders.  
+  To aid in the evaluation of step 3, we plot the between-arm differences for each variable with a parallel-coordinates plot. Investigators can compare plots of different weighting schemes to determine the one that best suits their needs prior to the actual, final, randomization.  
+  We demonstrate application of the approach with the Mupirocin-Iodophor Swap Out trial.'  
 ---
 
 ```{r, eval=FALSE, echo=FALSE}
@@ -34,9 +26,19 @@ abstract: 'Matching in cluster-randomized trials (CRTs) is important for improvi
 
 
 # Introduction
+
+Need to add in here: 1) constrained randomization comments and 2) mention of the paper Bianca found [@greevy2012].
+
 Individually randomized trials (IRTs) with blinding are the most rigorous way of determining whether a cause-effect relation exists between an intervention and an outcome  [e.g., @Sibbald1998]. However, for scientific and practical design reasons some interventions must be delivered to groups of subjects.  For example, suppose education researchers need to evaluate training for elementary school teachers with respect to its effect on literacy skills in third graders. Randomizing third graders to treatment or control conditions would not be practical-- it would require training many, many, teachers, and ignoring the majority of students as well as the variability of students within each class.  Instead, researchers would randomize teachers, schools, or counties to the training or to the control condition and evaluate the effect on multiple students in each classroom. Trials where groups are randomized are called group-randomized or cluster-randomized trials (CRTs). Three reasons for conducting a CRT are: (i) because implementation occurs at the cluster level, (ii) to avoid treatment contamination between subjects who are in contact with one another, and (iii) to measure intervention effects among cluster members who do not themselves receive treatment [@balzer2012match; @CRTrials2009]. CRTs are "the gold standard when allocation of identifiable groups is necessary" [@murray2004design].
 
-One challenge in CRTs is their limited sample size of randomizable units. Most CRTs have fewer than 30 independent units to randomize, though each unit may have thousands of individuals [@balzer2012match]. In large IRTs, investigators expect randomization to balance confounders across each arm of the trial.  The smaller number of randomizable units in CRTs makes imbalance a threat to the causal interpretation of any observed treatment effect. Stratified randomization, in which similar units are grouped together prior to randomization, is one solution to this. Scholars debate the sizes of these groups.  In particular, there is disagreement about the merits of matching, which involves grouping 2 units together, vs. stratification, where many more than 2 units are grouped[@PMVsStrat]. This article discusses matching. 
+One challenge in CRTs is their limited sample size of randomizable clusters. Many CRTs have fewer than 30 independent clusters to randomize, and most have fewer than 200.  Thus, even though each cluster may have thousands of individuals [@balzer2012match], there may well be concern about confounding. In contrast, in large IRTs investigators expect randomization to balance confounders across each arm of the trial.The smaller number of randomizable units in CRTs makes imbalance a threat to the causal interpretation of any observed treatment effect. 
+
+Several approaches to this problem have been proposed, including minimization [@scott2002], constrained randomization [@moulton2004], and matching or stratification (see, e.g., [@murray1998design]). Briefly, minimization can be seen as a sequential assignment of each randomized unit to each arm such that the imbalance after the addition of that unit is minimized. It is better suited to studies in which units are accrued as they are randomized. In cases where many clusters are assembled before randomization begins, it is dependent on the initial cluster and can be nearly deterministic. 
+
+Covariate constrained randomization effectively enumerates all possible treatment assignments and eliminates those that do not meet with desired features of balance. Some experimental simulation has shown that it can perform well when used carefully [li2016] and that it appears not to badly violate assumptions of randomization.
+Nonetheless, it is unclear to what degree each cluster will have an equal probability of assignment to each arm for any given trial, and whether any deviation from an equal probability of assignment to each arm is acceptable.
+
+In stratified randomization similar clusters are grouped together prior to randomization, and randomization takes place within these smaller groups. Scholars debate the sizes of these groups.  In particular, there is disagreement about the merits of matching, which involves grouping 2 clusters together, vs. stratification, where more than 2 clusters are grouped[@PMVsStrat]. This article discusses matching. 
 
 Many authors debate the value of matching in CRTs [@balzer2012match; @CRTrials2009; @gatsonis2017methods; @diehr1995breaking; @murray1998design; @imai2009essential;
 @PMVsStrat; @donner2007merits; @klar1997merits; @donner2000design; @martin1993effect]. Murray argues that "the choice of matching or stratification [of] factors is critical to the success of the procedure" [@murray1998design]. Others suggest that caution must be used when matching a small number of clusters due to the decrease in power [@donner2000design; @klar1997merits; @balzer2012match; @martin1993effect]. Breaking the matches, i.e., ignoring the matching during data analysis, addresses this [@diehr1995breaking], but perhaps only when there are a small number of large clusters [@donner2007merits].  Imai et al. argue that not matching, in small or large samples, is "equivalent to discarding a considerable fraction of one's data" [@imai2009essential]. However, in one trial "matching actually led to a loss in statistical efficiency" [@manun1994influence, @donner2000design]. Despite this ongoing debate, few authors discuss how to match the clusters [@raab2001balance]. 
