Added comments on constrained randomization

--- a/sage_latex_template_3/Kenv1.Rmd
+++ b/sage_latex_template_3/Kenv1.Rmd
@@ -27,16 +27,17 @@ abstract: 'In cluster-randomized trials (CRTs), matching is a technique that can
 
 # Introduction
 
-Need to add in here: 1) constrained randomization comments and 2) mention of the paper Bianca found [@greevy2012].
+Need to add in here: mention of the paper Bianca found [@greevy2012].
 
 Individually randomized trials (IRTs) with blinding are the most rigorous way of determining whether a cause-effect relation exists between an intervention and an outcome  [e.g., @Sibbald1998]. However, for scientific and practical design reasons some interventions must be delivered to groups of subjects.  For example, suppose education researchers need to evaluate training for elementary school teachers with respect to its effect on literacy skills in third graders. Randomizing third graders to treatment or control conditions would not be practical-- it would require training many, many, teachers, and ignoring the majority of students as well as the variability of students within each class.  Instead, researchers would randomize teachers, schools, or counties to the training or to the control condition and evaluate the effect on multiple students in each classroom. Trials where groups are randomized are called group-randomized or cluster-randomized trials (CRTs). Three reasons for conducting a CRT are: (i) because implementation occurs at the cluster level, (ii) to avoid treatment contamination between subjects who are in contact with one another, and (iii) to measure intervention effects among cluster members who do not themselves receive treatment [@balzer2012match; @CRTrials2009]. CRTs are "the gold standard when allocation of identifiable groups is necessary" [@murray2004design].
 
 One challenge in CRTs is their limited sample size of randomizable clusters. Many CRTs have fewer than 30 independent clusters to randomize, and most have fewer than 200.  Thus, even though each cluster may have thousands of individuals [@balzer2012match], there may well be concern about confounding. In contrast, in large IRTs investigators expect randomization to balance confounders across each arm of the trial.The smaller number of randomizable units in CRTs makes imbalance a threat to the causal interpretation of any observed treatment effect. 
 
-Several approaches to this problem have been proposed, including minimization [@scott2002], constrained randomization [@moulton2004], and matching or stratification (see, e.g., [@murray1998design]). Briefly, minimization can be seen as a sequential assignment of each randomized unit to each arm such that the imbalance after the addition of that unit is minimized. It is better suited to studies in which units are accrued as they are randomized. In cases where many clusters are assembled before randomization begins, it is dependent on the initial cluster and can be nearly deterministic. 
+Several approaches to this problem have been proposed, including minimization [@scott2002], constrained randomization [@moulton2004], and matching or stratification (see, e.g., [@murray1998design]). Briefly, minimization can be seen as a sequential assignment of each randomized unit to each arm such that the imbalance after the addition of that unit is minimized. It is better suited to studies in which units are accrued as they are randomized. In cases where many clusters are assembled before randomization begins, it is dependent on the initial cluster and can be nearly deterministic.
 
-Covariate constrained randomization effectively enumerates all possible treatment assignments and eliminates those that do not meet with desired features of balance. Some experimental simulation has shown that it can perform well when used carefully [li2016] and that it appears not to badly violate assumptions of randomization.
-Nonetheless, it is unclear to what degree each cluster will have an equal probability of assignment to each arm for any given trial, and whether any deviation from an equal probability of assignment to each arm is acceptable.
+Covariate constrained randomization effectively enumerates all possible treatment assignments and eliminates those that do not meet with desired features of balance. Some experimental simulation has shown that it can perform well when used carefully [li2016].
+Nonetheless, it is unclear to what degree each cluster will have an equal probability of assignment to each arm for any given trial.
+To some trialists, any deviation from an equal probability of assignment to each arm will be unacceptable; in any case it is unclear how to make principled decisions about how much inequity in arm assignment probability is allowable.
 
 In stratified randomization similar clusters are grouped together prior to randomization, and randomization takes place within these smaller groups. Scholars debate the sizes of these groups.  In particular, there is disagreement about the merits of matching, which involves grouping 2 clusters together, vs. stratification, where more than 2 clusters are grouped[@PMVsStrat]. This article discusses matching. 
 
